--- a/index.html
+++ b/index.html
@@ -432,12 +432,14 @@
           <div class="flex flex-col sm:flex-row gap-4 justify-center"><a href="#contact-form"
               class="btn-secondary text-center"
               style="background: white; color: var(--color-primary); border-color: white;"> <span
-                data-i18n="cta_book_btn">Book a Machine 🎉</span> </a> <a id="cta-whatsapp-btn" href="#" target="_blank"
-              rel="noopener noreferrer" class="btn-secondary text-center flex items-center justify-center gap-2"
-              style="background: transparent; color: white; border-color: white;"> <img
+                data-i18n="cta_book_btn">Book a Machine 🎉</span> </a> 
+                <!-- <a id="cta-whatsapp-btn" href="#" target="_blank" rel="noopener noreferrer" class="btn-secondary text-center flex items-center justify-center gap-2"
+              style="background: transparent; color: white; border-color: white;"> 
+                <img
                 src="https://api.iconify.design/mdi/whatsapp.svg?color=white&amp;width=24&amp;height=24" alt="WhatsApp"
                 class="w-6 h-6" onerror="this.style.display='none'"> <span data-i18n="cta_wa_btn">Chat on WhatsApp
-                💬</span> </a>
+                💬</span> 
+                </a> -->
           </div>
         </div>
       </section>
