--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
             <div class="snack-card p-8 text-center">
               <div
                 class="w-24 h-24 rounded-3xl bg-gradient-to-br from-orange-400 to-red-500 flex items-center justify-center mx-auto mb-6 icon-bounce">
-                <img src="https://api.iconify.design/mdi/clock-fast.svg?color=white&amp;width=48&amp;height=48"
-                  alt="24/7" class="w-12 h-12" onerror="this.style.display='none'">
+                <img src="" alt="" class="w-12 h-12" onerror="this.style.display='none'">
               </div>
               <h3 class="font-display text-2xl font-bold mb-4 text-gray-800">24/7
                 Availability ⏰</h3>
