--- a/index.html
+++ b/index.html
@@ -424,14 +424,11 @@
       <!-- CTA Section -->
       <section id="contact" class="py-24 bg-gradient-to-br from-orange-500 to-red-600">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-          <h2 class="font-display text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-6" data-i18n="cta_title">
-            Ready to Vend With Us? 🚀</h2>
-          <p class="text-xl text-white/90 mb-10 max-w-2xl mx-auto" data-i18n="cta_desc">Let's partner up and bring
-            amazing snacking experiences to your locations! Get in touch today!</p>
-          <div class="flex flex-col sm:flex-row gap-4 justify-center"><a href="#contact-form"
-              class="btn-secondary text-center"
-              style="background: white; color: var(--color-primary); border-color: white;"> <span
-                data-i18n="cta_book_btn">Book a Machine 🎉</span> </a> 
+          <h2 class="font-display text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-6" id="cta-title"></h2>
+          <p class="text-xl text-white/90 mb-10 max-w-2xl mx-auto" id="cta-desc"></p>
+          <div class="flex flex-col sm:flex-row gap-4 justify-center">
+            <a href="#contact-form" class="btn-secondary text-center" style="background: white; color: var(--color-primary); border-color: white;"> <span
+                id="cta-button"></span> </a> 
                 <!-- <a id="cta-whatsapp-btn" href="#" target="_blank" rel="noopener noreferrer" class="btn-secondary text-center flex items-center justify-center gap-2"
               style="background: transparent; color: white; border-color: white;"> 
                 <img
