--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <h2 class="font-display text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-6" id="cta-title"></h2>
           <p class="text-xl text-white/90 mb-10 max-w-2xl mx-auto" id="cta-desc"></p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="#contact-form" class="btn-secondary text-center" style="background: white; color: var(--color-primary); border-color: white;"> <span
+            <a class="btn-secondary text-center" style="background: white; color: var(--color-primary); border-color: white;"> <span
                 id="cta-button"></span> </a> 
                 <!-- <a id="cta-whatsapp-btn" href="#" target="_blank" rel="noopener noreferrer" class="btn-secondary text-center flex items-center justify-center gap-2"
               style="background: transparent; color: white; border-color: white;"> 
