--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <a href="#home" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Home</a>
             <a href="#about" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">About</a> 
             <a href="#services" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Services</a> 
+            <!-- <a href="#how-it-works" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">How It Works</a>
+            <a href="#early-program" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Early Program</a> -->
             <a href="#gallery" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Gallery</a> 
             <a href="#locations" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Locations</a> 
             <a href="#partners" class="font-bold text-gray-700 hover:text-orange-500 transition-colors">Partners</a>
@@ -71,6 +73,8 @@
               data-i18n="nav_home">Home</a>
               <a href="#about" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_about">About</a>
               <a href="#services" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_services">Services</a>
+              <!-- <a href="#how-it-works" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_how_it_works">How It Works</a> 
+              <a href="#early-program" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_early_program">Early Program</a> -->
               <a href="#gallery" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_gallery">Gallery</a>
               <a href="#locations" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_locations">Locations</a>
               <a href="#partners" onclick="toggleMobileMenu()" class="block py-3 text-lg font-bold border-b-2 border-orange-100 hover:text-orange-500" data-i18n="nav_partners">Partners</a>
@@ -386,6 +390,7 @@
           </a>
         </div>
       </section>
+
 
       <!-- <section id="contact-form" class="py-24 bg-white vending-pattern-mid">
         <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
