--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
     </section>
 
 
-    <section id="contact-form" class="py-24 bg-white vending-pattern-mid">
+    <!-- <section id="contact-form" class="py-24 bg-white vending-pattern-mid">
       <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-10">
           <span class="vending-badge mb-6">Contact Form ✉️</span>
@@ -618,7 +618,7 @@
           <button type="button" class="btn-vending w-full mt-6">Send 🎉</button>
         </form>
       </div>
-    </section>
+    </section> -->
 
       
       <!-- CTA Section -->
